# assignment-4-plpp

./: CMakeLists.txt  README.md  main.cpp
func/: editing_text.cpp  functionality.cpp  pages.cpp
include/: editing_text.h  functionality.h  mylib.h  pages.h
src/: line.cpp  line.h  main.cpp  mylib.cpp
